--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <img src="images/logo.svg" alt="Easybank" />
     </a>
 
-    <a href="#" class="header__menu">
+    <a href="#" class="header__menu hide-for-desktop">
       <span></span>
       <span></span>
       <span></span>
     </a>
 
-    <div class="header__links" >
+    <div class="header__links hide-for-mobile" >
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
@@ -42,7 +42,7 @@
       <a href="#">Careers</a>
     </div>
 
-    <button type="button" class="header__button">Request Invite</button>
+    <button type="button" class="header__button hide-for-mobile header__cta">Request Invite</button>
 
     </nav>
 
