--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 </head>
 <body>
 
-  <header class="header">
-    <nav class="flex flex-jc-sb flex-ai-c">
+  <header class="header open">
+
+    <div class="overlay has-fade"></div>
+
+    <nav class="container flex flex-jc-sb flex-ai-c">
     <a href="/" class="header__logo">
       <img src="images/logo.svg" alt="Easybank" />
     </a>
 
-    <a href="#" class="header__menu hide-for-desktop">
+    <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
       <span></span>
       <span></span>
       <span></span>
@@ -46,9 +49,19 @@
 
     </nav>
 
+    <div class="header__menu has-fade">
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+      <a href="">Blog</a>
+      <a href="">Careers</a>
+    </div>
+
   </header>
 
-  <!-- Home Working
+  
+
+  Home Working
   About
   Contact
   Blog
@@ -123,12 +136,12 @@
 
   Request Invite
 
-  © Easybank. All Rights Reserved -->
+  © Easybank. All Rights Reserved
   
-  <div class="attribution">
+<!--   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
   <script src="app/js/script.js"></script>
 </body>
 </html>
